--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobile-onefx-boilerplate",
+  "name": "mobile-guanxi-io",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -10,7 +10,7 @@
     "test": "npm run lint && jest",
     "jest": "jest",
     "typecheck": "tsc --noEmit",
-    "lint": "pretty-quick --staged && tslint --fix --project tsconfig.json -t stylish",
+    "lint": "pretty-quick --staged && tslint --fix --project tsconfig.json -t stylish && tsc",
     "qualitycheck": "npm-run-all typecheck tslint",
     "prettier": "prettier --single-quote --trailing-comma es5 --write \"src/{*.ts,**/*.ts,*.tsx,**/*.tsx}\"\n"
   },
@@ -57,6 +57,7 @@
     "apollo-client": "2.6.4",
     "apollo-link": "1.2.13",
     "apollo-link-http": "1.5.16",
+    "apollo-link-logger": "^1.2.3",
     "axios": "0.19.0",
     "buffer": "^5.4.3",
     "deep-extend": "^0.6.0",
@@ -80,7 +81,7 @@
     "react-apollo": "3.1.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-appearance": "~0.1.0",
+    "react-native-appearance": "^0.1.0",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.12.0",
