--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-appearance": "^0.1.0",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-reanimated": "~1.2.0",
+    "react-native-screens": "~1.0.0-alpha.23",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.12.0",
     "react-redux": "6.0.0",
