--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "i18n-js": "3.3.0",
     "isomorphic-unfetch": "3.0.0",
     "jwt-decode": "^2.2.0",
+    "markdown-it": "^10.0.0",
+    "markdown-it-mark": "^3.0.0",
     "react": "16.8.3",
     "react-apollo": "3.1.3",
     "react-dom": "16.8.3",
@@ -86,6 +88,7 @@
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "~1.0.0-alpha.23",
     "react-native-web": "^0.11.7",
+    "react-native-webview": "^8.0.6",
     "react-navigation": "^3.12.0",
     "react-redux": "6.0.0",
     "redux": "4.0.1",
