--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
     "version": "0.1.0",
-    "name": "mobile-onefx-boilerplate",
-    "slug": "mobile-onefx-boilerplate",
+    "name": "mobile-guanxi-io",
+    "slug": "mobile-guanxi-io",
     "privacy": "public",
     "sdkVersion": "35.0.0",
     "platforms": ["ios", "android"],
