--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "jwt-decode": "^2.2.0",
     "markdown-it": "^10.0.0",
     "markdown-it-mark": "^3.0.0",
+    "moment": "^2.24.0",
     "react": "16.8.3",
     "react-apollo": "3.1.3",
     "react-dom": "16.8.3",
