--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-appearance": "^0.1.0",
+    "react-native-autoheight-webview": "^1.4.2",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "~1.0.0-alpha.23",
